# StackByteCodeStyleInterpreter

./: .gitignore  Ast.cpp  Ast.h  BytecodeInstructions.cpp  BytecodeInstructions.h  CMakeLists.txt  Common.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.h  RuntimeValue.cpp  RuntimeValue.h  RuntimeValue_Struct.cpp  RuntimeValue_Struct.h  StackFrame.cpp  StackFrame.h  SymbolTable.cpp  SymbolTable.h  Utils.h  compiler.cpp  compiler.h  main.cpp
